Quarkus 3.8.6 and other dependency upgrades