@@ -17,31 +17,30 @@
     <maven.compiler.source>${jdk.version}</maven.compiler.source>
     <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
 
-    <quarkus.version>2.16.6.Final</quarkus.version>
-    <logback.version>1.4.1</logback.version>
-    <slf4j.version>1.7.24</slf4j.version>
-    <jackson.version>2.14.2</jackson.version>
-    <immutables.version>2.8.2</immutables.version>
+    <quarkus.version>3.8.6</quarkus.version>
+    <logback.version>1.4.14</logback.version>
+    <slf4j.version>1.7.36</slf4j.version>
+    <jackson.version>2.17.2</jackson.version>
+    <immutables.version>2.10.1</immutables.version>
 
     <findbugs.version>3.0.2</findbugs.version>
 
-    <junit.jupiter.version>5.8.2</junit.jupiter.version>
-    <junit.platform.version>1.9.2</junit.platform.version>
-    <jsonassert.version>1.5.0</jsonassert.version>
+    <junit.jupiter.version>5.11.0</junit.jupiter.version>
+    <junit.platform.version>1.11.0</junit.platform.version>
+    <jsonassert.version>1.5.3</jsonassert.version>
 
-    <lombok.version>1.18.22</lombok.version>
+    <lombok.version>1.18.34</lombok.version>
 
-    <commons-io.version>2.7</commons-io.version>
-    <commons-csv.version>1.5</commons-csv.version>
-    <commons-codec.version>1.13</commons-codec.version>
-    <commons-lang.version>3.9</commons-lang.version>
+    <commons-io.version>2.16.1</commons-io.version>
+    <commons-csv.version>1.11.0</commons-csv.version>
+    <commons-codec.version>1.17.1</commons-codec.version>
+    <commons-lang.version>3.17.0</commons-lang.version>
 
     <eirslett.version>1.12.0</eirslett.version>
     <eirslett-node.version>v16.13.1</eirslett-node.version>
     <eirslett-yarn.version>v1.22.5</eirslett-yarn.version>
 
-
-    <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
+    <surefire-plugin.version>3.3.1</surefire-plugin.version>
   </properties>
 
   <build>
@@ -49,22 +48,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.0</version>
-        <configuration>
-          <argLine>
-            --illegal-access=permit
-          </argLine>
-        </configuration>
+        <version>3.3.1</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.22.0</version>
-        <configuration>
-          <argLine>
-            --illegal-access=permit
-          </argLine>
-        </configuration>
+        <version>3.3.1</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -105,7 +94,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
+          <version>3.13.0</version>
           <configuration>
             <forceJavacCompilerUse>true</forceJavacCompilerUse>
             <annotationProcessorPaths>
@@ -304,7 +293,7 @@
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest</artifactId>
-      <version>2.1</version>
+      <version>2.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -443,5 +432,12 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <repositories>
+    <repository>
+      <id>maven_central</id>
+      <name>Maven Central</name>
+      <url>https://repo.maven.apache.org/maven2/</url>
+    </repository>
+  </repositories>
 
 </project>
